--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
       <div class="footer">Номер: <span id="ticket-number">286&nbsp;542</span></div>
     </div>
   </div>
+	<div class="changeColor" id="changeColor"></div>
   <div id = "reset-div" class="reopen-message">Ви зможете повторно відкрити цю<br>сторінку через історію браузера</div> 
 </body>
 </html>
+
 
 
 
