--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>monobank</title>
+  <title>Квиток Миколаївелектротранс Тролейбус | monobank</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
@@ -55,6 +55,7 @@
   <div id = "reset-div" class="reopen-message">Ви зможете повторно відкрити цю<br>сторінку через історію браузера</div> 
 </body>
 </html>
+
 
 
 
